Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 6.2.0 RC
-
Fix Version/s: 6.2.0
-
Component/s: Network: SSL
-
Labels:None
-
Platform/s:
-
Commits:504df6b135d4ac17aa2290e1aa943d216fb7ef55 (qt/qtbase/6.2.0) 8910a01c7212e1fb2d5192b19ef6179dd1b7e456 (qt/qtbase/dev) 604e4a8e7ce01f2622daabf4e1e5ba3261cd229f (qt/qtbase/6.2)
Description
SSL connection fails on Android because CA certificate list is empty.
And, the confusion is even bigger because there is a separate function that is not used anymore:
// TLSTODO: remove. #if defined(Q_OS_ANDROID) && !defined(Q_OS_ANDROID_EMBEDDED) QList<QByteArray> fetchSslCertificateData(); #endif
Attachments
Issue Links
- is duplicated by
-
QTBUG-96832 Android: SSL errors for every HTTPS site
-
- Closed
-